--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,11 @@
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@shadcn/ui": "^0.0.4",
+    "algebra.js": "^0.2.6",
+    "better-react-mathjax": "^2.3.0",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -19,7 +24,9 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-mathjax2": "^0.0.2",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1"
   },
